# python-devops

./: README.md  pyproject.toml
Code/Subprocess/: sub.py
advanced_modules/parallel_processing/: README.md  pyproject.toml
advanced_modules/parallel_processing/src/par_pro/: __init__.py  __main__.py  cli.py
advanced_modules/parallel_processing/src/par_pro/multi_processing/: mp_use_cases.py  multiprocess.py
advanced_modules/parallel_processing/src/par_pro/threading/: th_use_cases.py  thread.py
example_python_project/: .env  README.md  requirements.txt  setup.py
example_python_project/docs/: README.md
example_python_project/example_python_env/: pyvenv.cfg
example_python_project/example_python_env/Scripts/: activate  activate.bat
example_python_project/scripts/: README.md
example_python_project/src/: README.md
example_python_project/src/example_python_project/: README.md  main.py
example_python_project/src/example_python_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example_python_project/src/example_python_project/api/: db.sqlite3  flask_app.py
example_python_project/src/example_python_project/config/: settings.py
example_python_project/src/example_python_project/middleware/: logging_middleware.py
example_python_project/src/example_python_project/utils/: logger.py
example_python_project/tests/: README.md
expense_tracker/: README.md  requirements.txt  setup.py
expense_tracker/src/expense_tracker/: main.py
expense_tracker/src/expense_tracker.egg-info/: SOURCES.txt  entry_points.txt
(+8 files in other folders)
